HLS_FIR/Transposed_Folded_FIR_HLS/Transposed_Folded_FIR_HLS/logs/hls_run_csim_8928.backup.log
  **** HLS Build v2024.2 5238294
INFO: [HLS 200-2005] Using work_dir C:/HLS-multirate-DSP/HLS_FIR/Transposed_Folded_FIR_HLS/Transposed_Folded_FIR_HLS 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=FIR_HLS.cpp' from C:/HLS-multirate-DSP/HLS_FIR/Transposed_Folded_FIR_HLS/hls_config.cfg(7)
INFO: [HLS 200-10] Adding design file 'C:/HLS-multirate-DSP/HLS_FIR/Transposed_Folded_FIR_HLS/FIR_HLS.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=FIR_HLS.h' from C:/HLS-multirate-DSP/HLS_FIR/Transposed_Folded_FIR_HLS/hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file 'C:/HLS-multirate-DSP/HLS_FIR/Transposed_Folded_FIR_HLS/FIR_HLS.h' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=../../Matlab/FIR_normal_HLS.h' from C:/HLS-multirate-DSP/HLS_FIR/Transposed_Folded_FIR_HLS/hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file 'C:/HLS-multirate-DSP/Matlab/FIR_normal_HLS.h' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=FIR_HLS_TB.cpp' from C:/HLS-multirate-DSP/HLS_FIR/Transposed_Folded_FIR_HLS/hls_config.cfg(10)
INFO: [HLS 200-10] Adding test bench file 'C:/HLS-multirate-DSP/HLS_FIR/Transposed_Folded_FIR_HLS/FIR_HLS_TB.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=../../Matlab/TS_HLS_normal.dat' from C:/HLS-multirate-DSP/HLS_FIR/Transposed_Folded_FIR_HLS/hls_config.cfg(11)
INFO: [HLS 200-10] Adding test bench file 'C:/HLS-multirate-DSP/Matlab/TS_HLS_normal.dat' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=../../Matlab/TS_HLS_normal.res' from C:/HLS-multirate-DSP/HLS_FIR/Transposed_Folded_FIR_HLS/hls_config.cfg(12)
INFO: [HLS 200-10] Adding test bench file 'C:/HLS-multirate-DSP/Matlab/TS_HLS_normal.res' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=FIR_HLS' from C:/HLS-multirate-DSP/HLS_FIR/Transposed_Folded_FIR_HLS/hls_config.cfg(13)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from C:/HLS-multirate-DSP/HLS_FIR/Transposed_Folded_FIR_HLS/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xck26-sfvc784-2LV-c' from C:/HLS-multirate-DSP/HLS_FIR/Transposed_Folded_FIR_HLS/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xck26-sfvc784-2LV-c'
INFO: [HLS 200-1465] Applying ini 'csim.code_analyzer=0' from C:/HLS-multirate-DSP/HLS_FIR/Transposed_Folded_FIR_HLS/hls_config.cfg(14)
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from C:/HLS-multirate-DSP/HLS_FIR/Transposed_Folded_FIR_HLS/hls_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../FIR_HLS_TB.cpp in debug mode
csim.mk:88: recipe for target 'obj/FIR_HLS_TB.o' failed
In file included from ../../../../FIR_HLS_TB.cpp:1:
In file included from ../../../../FIR_HLS.h:2:
In file included from C:/AMD/Vitis/2024.2/include/ap_fixed.h:9:
In file included from C:/AMD/Vitis/2024.2/include/etc/ap_common.h:658:
In file included from C:/AMD/Vitis/2024.2/include/etc/ap_private.h:68:
In file included from C:/AMD/Vitis/2024.2/include/hls_half.h:26:
In file included from C:/AMD/Vitis/2024.2/include/etc/hls_half_fpo.h:19:
In file included from C:/AMD/Vitis/2024.2/include/hls_fpo.h:140:
In file included from C:/AMD/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/AMD/Vitis/2024.2/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/AMD/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
In file included from ../../../../FIR_HLS_TB.cpp:1:
../../../../FIR_HLS.h:11:79: error: non-member function cannot have 'const' qualifier
void FIR_HLS(hls::stream<fir_data_t> &input, hls::stream<fir_data_t> &output) const coef_data_t FIR_coe[], int N_delays, fir_data_t x_n);
                                                                              ^~~~~~
../../../../FIR_HLS.h:11:84: error: expected ';' after top level declarator
void FIR_HLS(hls::stream<fir_data_t> &input, hls::stream<fir_data_t> &output) const coef_data_t FIR_coe[], int N_delays, fir_data_t x_n);
                                                                                   ^
                                                                                   ;
../../../../FIR_HLS.h:11:97: error: definition of variable with array type needs an explicit size or an initializer
void FIR_HLS(hls::stream<fir_data_t> &input, hls::stream<fir_data_t> &output) const coef_data_t FIR_coe[], int N_delays, fir_data_t x_n);
                                                                                                ^
../../../../FIR_HLS.h:11:108: error: expected unqualified-id
void FIR_HLS(hls::stream<fir_data_t> &input, hls::stream<fir_data_t> &output) const coef_data_t FIR_coe[], int N_delays, fir_data_t x_n);
                                                                                                           ^
../../../../FIR_HLS.h:11:107: error: expected ';' after top level declarator
void FIR_HLS(hls::stream<fir_data_t> &input, hls::stream<fir_data_t> &output) const coef_data_t FIR_coe[], int N_delays, fir_data_t x_n);
                                                                                                          ^
                                                                                                          ;
../../../../FIR_HLS.h:11:122: error: redefinition of 'fir_data_t' as different kind of symbol
void FIR_HLS(hls::stream<fir_data_t> &input, hls::stream<fir_data_t> &output) const coef_data_t FIR_coe[], int N_delays, fir_data_t x_n);
                                                                                                                         ^
../../../../FIR_HLS.h:7:24: note: previous definition is here
typedef ap_fixed<16,1> fir_data_t; 
                       ^
../../../../FIR_HLS.h:11:132: error: expected ';' after top level declarator
void FIR_HLS(hls::stream<fir_data_t> &input, hls::stream<fir_data_t> &output) const coef_data_t FIR_coe[], int N_delays, fir_data_t x_n);
                                                                                                                                   ^
                                                                                                                                   ;
1 warning and 7 errors generated.
make: *** [obj/FIR_HLS_TB.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 4 seconds. Total CPU system time: 2 seconds. Total elapsed time: 12.788 seconds; peak allocated memory: 273.707 MB.
